--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.2",
+    "ical-generator": "^3.2.0",
     "nodemon": "^2.0.15"
   }
 }
