--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "ical-generator": "^7.1.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "simple-oauth2": "^5.0.0",
