--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.0.2",
     "cache-manager": "^5.5.2",
     "ical-generator": "^7.1.0",
     "parse-link-header": "^2.0.0",
