--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "cache-manager": "^5.5.2",
     "ical-generator": "^7.1.0",
     "parse-link-header": "^2.0.0",
     "reflect-metadata": "^0.2.0",
