feat: make findAllEvents method iterate over all pages returned from the API

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "ical-generator": "^7.1.0",
+    "parse-link-header": "^2.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "simple-oauth2": "^5.0.0",
@@ -33,6 +34,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.3.1",
+    "@types/parse-link-header": "^2.0.3",
     "@types/simple-oauth2": "^5.0.7",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
