--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "42cal",
   "version": "0.1.1",
   "description": "",
+  "type": "module",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
