--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "ical-generator": "^7.1.0",
+    "p-queue": "^8.0.1",
     "parse-link-header": "^2.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
