feat: add HTTP Basic Passport strategy

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.2",
     "cache-manager": "^5.5.2",
@@ -29,6 +30,8 @@
     "ical-generator": "^7.1.0",
     "p-queue": "^8.0.1",
     "parse-link-header": "^2.0.0",
+    "passport": "^0.7.0",
+    "passport-http": "^0.3.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "simple-oauth2": "^5.0.0",
@@ -42,6 +45,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.3.1",
     "@types/parse-link-header": "^2.0.3",
+    "@types/passport-http": "^0.3.11",
     "@types/simple-oauth2": "^5.0.7",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
