--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.2",
+    "@nestjs/swagger": "^7.3.1",
     "cache-manager": "^5.5.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
