--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "42cal",
-  "version": "1.0.2",
+  "version": "1.0.3-alpha.0",
   "description": "",
   "type": "module",
   "author": "",
