fix: remove trailing dash '-'

--- a/.github/workflows/deploy-to-prod.yml
+++ b/.github/workflows/deploy-to-prod.yml
@@ -39,7 +39,7 @@ jobs:
           secret-key: ${{ secrets.SCW_SECRET_KEY }}
           default-project-id: ${{ vars.SCW_DEFAULT_PROJECT_ID }}
           default-organization-id: ${{ vars.SCW_DEFAULT_ORGANIZATION_ID }}
-          args: >-
+          args: >
             container container update ${{ env.CONTAINER_ID }}
               registry-image=${{ steps.meta.outputs.tags }}
               --http-option=${{ env.CONTAINER_HTTP_OPTION }}
