--- a/.github/workflows/deploy-to-prod.yml
+++ b/.github/workflows/deploy-to-prod.yml
@@ -42,4 +42,4 @@ jobs:
           args: >
             container container update ${{ env.CONTAINER_ID }}
               registry-image=${{ steps.meta.outputs.tags }}
-              --http-option=${{ env.CONTAINER_HTTP_OPTION }}
+              http-option=${{ env.CONTAINER_HTTP_OPTION }}
