--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker image to registry
 on:
   push:
     branches: ["master"]
-    tags: ["v*"]
+    tags: ["api-v*"]
 
 env:
   REGISTRY: ghcr.io
