--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "42cal",
-  "version": "1.2.0-alpha.1",
+  "version": "1.2.0",
   "description": "",
   "type": "module",
   "author": "",
